Bugfix: Crash when cutting the layers rapidly

Update operation of LayerBox seems to be slower, so the selected nodes
don't get updated in time. And because KisClipboard::setLayers takes a
node which is part of the node graph, we remove the ones which are.

BUG:443610